# mu_plus

./: .git-blame-ignore-revs  .gitignore  .markdownlintignore  CISettings.py  Cargo.toml  CodeQlFilters.yml  LICENSE.txt  Readme.md  Readme.rst  RepoDetails.md  azure-pipelines-pr-gate-linux.yml  azure-pipelines-pr-gate.yml  ci.mu.yaml  pip-requirements.txt
.azurepipelines/: Matrix-Build-Job.yml  MuDevOpsWrapper.yml  Ubuntu-GCC5.yml  Ubuntu-PatchCheck.yml  Windows-VS.yml  Windows-VS2019.yml  Windows-VS2022.yml
.azurepipelines/templates/: ReadMe.md  basetools-build-steps.yml  markdownlint-check-prereq-steps.yml  platform-build-run-steps.yml  pr-gate-build-job.yml  pr-gate-steps.yml  spell-check-prereq-steps.yml
.config/: CredScanSuppressions.json
.github/: codecov.yml  dependabot.yml
.github/workflows/: auto-approve.yml  auto-merge.yml  codeql.yml  issue-assignment.yml  label-issues.yml  label-sync.yml  release-draft.yml  stale.yml  triage-issues.yml
.pytool/: CISettings.py  Readme.md
AdvLoggerPkg/: AdvLoggerPkg.ci.yaml  AdvLoggerPkg.dec  AdvLoggerPkg.dsc  AdvLoggerPkgExtra.uni  ReadMe.md  ReadMe.rst
AdvLoggerPkg/Crates/RustAdvancedLoggerDxe/: Cargo.toml
AdvLoggerPkg/Crates/RustAdvancedLoggerDxe/src/: lib.rs
DfciPkg/: BuidingDfciRepo.txt  BuildNewMain.bat  DfciPkg.ci.yaml  DfciPkg.dec  DfciPkg.dsc  DfciPkg.mu.yaml  Dfci_Feature.md  ReadMe.rst
FhrPkg/: FhrPkg.ci.yaml  FhrPkg.dec  FhrPkg.dsc  FhrPkg.dsc.inc  FhrPkg.uni  Readme.rst
HidPkg/: HidPkg.ci.yaml  HidPkg.dec  HidPkg.dsc  ReadMe.rst
HidPkg/UefiHidDxe/: Cargo.toml  UefiHidDxe.inf
HidPkg/UefiHidDxe/src/: driver_binding.rs  hid.rs  key_queue.rs  keyboard.rs  main.rs  pointer.rs
HidPkg/UefiHidDxeV2/: Cargo.toml  UefiHidDxeV2.inf
HidPkg/UefiHidDxeV2/src/: boot_services.rs  driver_binding.rs  hid.rs  hid_io.rs  keyboard.rs  lib.rs  main.rs  pointer.rs
HidPkg/UefiHidDxeV2/src/keyboard/: key_queue.rs  mod.rs  simple_text_in.rs  simple_text_in_ex.rs
HidPkg/UefiHidDxeV2/src/pointer/: absolute_pointer.rs  mod.rs
MfciPkg/: MfciPkg.ci.yaml  MfciPkg.dec  MfciPkg.dsc  MfciPkg.dsc.inc  ReadMe.rst
MsApplicationPkg/: MsApplicationPkg.ci.yaml  MsApplicationPkg.dec  MsApplicationPkg.dsc  MsApplicationPkg.uni  MsApplicationPkgExtra.uni  ReadMe.rst
MsCapsuleUpdatePkg/: MsCapsuleUpdatePkg.dec  MsCapsuleUpdatePkg.dsc  readme.md
MsCorePkg/: Feature_DebugRouting_Readme.md  MsCorePkg.ci.yaml  MsCorePkg.dec  MsCorePkg.dsc  MsCorePkg.mu.yaml  MsCorePkg.uni  MsCorePkgExtra.uni  ReadMe.md  ReadMe.rst
MsGraphicsPkg/: MsGraphicsPkg.ci.yaml  MsGraphicsPkg.dec  MsGraphicsPkg.dsc  MsGraphicsPkg.mu.yaml  MsGraphicsPkg.uni  MsGraphicsPkgExtra.uni  ReadMe.rst
MsSampleFmpDevicePkg/: MsSampleFmpDevicePkg.dec  MsSampleFmpDevicePkg.dsc  readme.md
MsWheaPkg/: MsWheaPkg.ci.yaml  MsWheaPkg.dec  MsWheaPkg.dsc  MsWheaPkg.mu.yaml  readme.md
PcBdsPkg/: PcBdsPkg.ci.yaml  PcBdsPkg.dec  PcBdsPkg.dsc  PcBdsPkg.mu.yaml
SharedCryptoPkg/: BuildDrivers.py  DriverBuilder.py  LICENSE.txt  PlatformBuild.py  PlatformBuildWorker.py  PublishDrivers.py  Readme.md  SharedCryptoDriver.dsc  SharedCryptoPkg.ci.dsc  SharedCryptoPkg.ci.yaml  SharedCryptoPkg.dec  SharedCryptoPkg.dsc  SharedCryptoPkg.mu.yaml  SharedCryptoPkg.uni  SharedCryptoPkgDriver.dsc  SharedCryptoSettings.py  azure-pipelines-release-gate.yml  feature_sharedcrypto.md  mu_arm_tiano_ext_dep.json  mu_basecore_ext_dep.json  mu_tiano_ext_dep.json  release_notes.md  tools_def.txt
TpmTestingPkg/: TpmReplay.dsc.inc  TpmTestingPkg.ci.yaml  TpmTestingPkg.dec  TpmTestingPkg.dsc
UefiTestingPkg/: Readme.md  UefiTestingPkg.ci.yaml  UefiTestingPkg.dec  UefiTestingPkg.dsc  UefiTestingPkg.mu.yaml  UefiTestingPkgPrivate.dec
XmlSupportPkg/: ReadMe.md  XmlSupportPkg.ci.yaml  XmlSupportPkg.dec  XmlSupportPkg.dsc  XmlSupportPkg.mu.yaml
ZeroTouchPkg/: ZeroTouchPkg.ci.yaml  ZeroTouchPkg.dec  ZeroTouchPkg.dsc  ZeroTouchPkg.mu.yaml  ZeroTouchPkg.uni  ZeroTouchPkgExtra.uni
(+1111 files in other folders)
