[workspace]

# Add packages that generate binaries here
members = [
  "HidPkg/Crates/HidIo",
  "MsCorePkg/HelloWorldRustDxe"
]

# Add packages that generate libraries here
[workspace.dependencies]
RustAdvancedLoggerDxe = {path = "AdvLoggerPkg/Crates/RustAdvancedLoggerDxe"}
RustBootServicesAllocatorDxe = {path = "MsCorePkg/Crates/RustBootServicesAllocatorDxe"}

r-efi = "4.0.0"
spin = "0.9.8"
