#
# Copyright (c) Microsoft Corporation. All rights reserved.
# SPDX-License-Identifier: BSD-2-Clause-Patent
#
[package]
name = "UefiHidDxe"
version = "0.1.0"
edition = "2021"
authors = ["Microsoft"]

[[bin]]
name = "UefiHidDxe"
path = "src/main.rs"
test = false

[dependencies]
HidIo = {workspace=true}
hidparser = {workspace=true}
HiiKeyboardLayout = {workspace=true}
memoffset = {workspace=true}
r-efi = {workspace=true}
rustversion = {workspace=true}
RustBootServicesAllocatorDxe = {workspace=true}
RustAdvancedLoggerDxe = {workspace=true}
